--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "pygmt>=0.13.0",
     "gnsstoolbox>=1.2.17",
+    "gpsdatetime>=1.0.41",
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
